k8s/app/server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aggregator-server
  namespace: aggregator-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aggregator-server
  template:
    metadata:
      labels:
        app: aggregator-server
    spec:
      serviceAccountName: aggregator-server-sa
      containers:
        - name: aggregator-server
          image: aggregator-server
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
