k8s/app/server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aggregator-server-svc
  namespace: aggregator-app
spec:
  type: ClusterIP
  selector:
    app: aggregator-server
  ports:
    - port: 5000
      targetPort: 5000
